--- a/backend/TodoApi/appsettings.Development.json
+++ b/backend/TodoApi/appsettings.Development.json
@@ -2,8 +2,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    }
+  },
+  "Database": {
+    "UseInMemory": true,
+    "Provider": "InMemory"
   }
 }
 
