AIRE-21 Add performance optimizations and caching features

--- a/backend/TodoApi/appsettings.json
+++ b/backend/TodoApi/appsettings.json
@@ -37,7 +37,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "Redis": "localhost:6379"
+  },
+  "Cache": {
+    "Enabled": true,
+    "DefaultExpirationMinutes": 5,
+    "TodoListExpirationMinutes": 2,
+    "TodoDetailExpirationMinutes": 10,
+    "StatisticsExpirationMinutes": 1
   },
   "Database": {
     "UseInMemory": true,
